# InferOptimalObliqueDT

./: CMakeLists.txt  README.md
datasets/: BreastCancerCoimbra.csv  Immunotherapy.csv  Person_Gender_Height_Weight_Index.csv  SIRTUIN6.csv  cryptotherapy.csv  heart_60+.csv  wine.csv  zoo.csv
lib/DiverLibs/src/: main.cpp
lib/EvalMaxSAT/: CMakeLists.txt
lib/EvalMaxSAT/src/: EvalMaxSAT.h
lib/MaLib/: CMakeLists.txt
lib/MaLib/src/: Mean.h  coutUtil.h  rand.h
lib/MesData/: CMakeLists.txt
lib/MesData/src/: Domain.h  MesData.h  main.cpp
main/: CMakeLists.txt
main/src/: main.cpp
